<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    style="@style/FormHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_create_an_account1"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_full_name"
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/label_full_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/full_name"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@id/label_full_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_phone_number"
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_phone_number"
                    app:layout_constraintTop_toBottomOf="@+id/full_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone_number"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="92XXX..."
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@id/label_phone_number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_password"
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_password"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/label_password"
                    app:passwordToggleDrawable="@drawable/visibility_selector"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        style="@style/FormInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        app:layout_constraintTop_toBottomOf="@id/label_password" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_confirm_password"
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_confirm_password"
                    app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/label_confirm_password"
                    app:passwordToggleDrawable="@drawable/visibility_selector"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password_confirmation"
                        style="@style/FormInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        app:layout_constraintTop_toBottomOf="@id/label_confirm_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_btn"
                    style="@style/FormButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_create_an_account"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>