<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    style="@style/FormHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_my_profile"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_contact_details"
                    style="@style/DashboardLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="Contact details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_full_name"
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_full_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_contact_details" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/full_name"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@id/label_full_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_phone_number"
                    style="@style/FormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_phone_number"
                    app:layout_constraintTop_toBottomOf="@+id/full_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone_number"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@id/label_phone_number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_email"
                    style="@style/FormLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/label_email_optional"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_email_optional"
                    style="@style/FormSubLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Optional"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_email"
                    app:layout_constraintBottom_toBottomOf="@+id/label_email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@id/label_email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_personal_details"
                    style="@style/DashboardLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Personal details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_date_of_birth"
                    style="@style/FormLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_date_of_birth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/label_date_of_birth_required"
                    app:layout_constraintTop_toBottomOf="@+id/label_personal_details" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_date_of_birth_required"
                    style="@style/FormSubLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Required for diagnosis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_date_of_birth"
                    app:layout_constraintBottom_toBottomOf="@+id/label_date_of_birth" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/date_of_birth"
                    style="@style/FormInput"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/label_date_of_birth" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_cnic"
                    style="@style/FormLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_cnic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/label_cnic_required"
                    app:layout_constraintTop_toBottomOf="@+id/date_of_birth" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_cnic_required"
                    style="@style/FormSubLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Required for diagnosis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_cnic"
                    app:layout_constraintBottom_toBottomOf="@+id/label_cnic" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:maxLength="15"
                    android:id="@+id/cnic"
                    android:inputType="text"
                    android:digits="0123456789-"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/label_cnic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_gender"
                    style="@style/FormLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/label_gender_required"
                    app:layout_constraintTop_toBottomOf="@+id/cnic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_gender_required"
                    style="@style/FormSubLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Required for diagnosis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_gender"
                    app:layout_constraintBottom_toBottomOf="@+id/label_gender" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/gender"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:spinnerMode="dropdown"
                    android:entries="@array/genders"
                    app:layout_constraintTop_toBottomOf="@+id/label_gender" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_city"
                    style="@style/FormLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/label_city_required"
                    app:layout_constraintTop_toBottomOf="@+id/gender" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_city_required"
                    style="@style/FormSubLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Required for diagnosis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/label_city"
                    app:layout_constraintBottom_toBottomOf="@+id/label_city" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/city"
                    style="@style/FormInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:spinnerMode="dropdown"
                    app:layout_constraintTop_toBottomOf="@+id/label_city" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/update_details"
                    style="@style/FormButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_update_detail"
                    app:layout_constraintTop_toBottomOf="@+id/city" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>